syntax = "proto3";

package contracts.crudstore;
option go_package = "github.com/makkalot/eskit/generated/grpc/go/crudstore";


message SchemaSpec {
    // optional field that keeps the version of the schema for that object
    // field can be used to make sure the client are sending objects against
    // the latest version of the schema registered in the system
    uint64 schema_version = 1;
    // optional field that is used for validating the entity for certain
    // schema version. If empty no validation is done, if supplied the submitted
    // object is validated against the schema
    string json_schema = 2;
}

message CrudEntitySpec {
    // the entity type we're registering like Project, User and etc
    // if have same entity on different bounded contexes can use packages
    // like com.makkalot.User, this field is required
    string entity_type = 1;
    SchemaSpec schema_spec = 2;
}
